--- a/JPMTest/pom.xml
+++ b/JPMTest/pom.xml
@@ -4,4 +4,22 @@
   <artifactId>JPMTest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build/>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot</artifactId>
+  		<version>1.0.2.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-autoconfigure</artifactId>
+  		<version>1.0.2.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-validator</artifactId>
+  		<version>4.1.0.Final</version>
+  		<type>pom.lastUpdated</type>
+  	</dependency>
+  </dependencies>
 </project>
